Create 'Starter function' function

--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "likhog-activate",
-  "type": "module",
+  "name": "starter-template",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "src/main.js",
+  "type": "module",
+  "scripts": {
+    "format": "prettier --write ."
+  },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-appwrite": "^12.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
